# collisions-disallowed

./: Cargo.toml  LICENSE  README.md
src/: main.rs
